best-practices-cel/disallow-helm-tiller/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-ht
spec:
  containers:
  - name: busybox
    image: busybox:v1.35
  - name: nothelmbox
    image: busybox:v1.35
