best-practices-cel/disallow-helm-tiller/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-helm-tiller
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-helm-tiller.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: disallow-helm-tiller
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-pod.yaml
    - apply:
        file: good-deploy.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-deploy.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-fail-first.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-success-first.yaml
